primary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-primary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
      version: primary
  template:
    metadata:
      labels:
        app: flask-app
        version: primary
    spec:
      containers:
      - name: flask-app
        image: sukanya996/flaskimg-app:1
        ports:
        - containerPort: 5000
