rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: flask-rollout
  labels:
    app: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause:
            duration: 30s
        - setWeight: 50
        - pause:
            duration: 60s
        - setWeight: 100
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: sukanya996/flaskimg-app:v1
          ports:
            - containerPort: 5000
