canarysvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-canary
spec:
  selector:
    app: flask-app
    version: canary
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
