svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: LoadBalancer     # This makes it publicly accessible
  selector:
    app: flask
  ports:
    - port: 5000            # External port to access the app
      targetPort: 5000    # Port your Flask app listens on inside the container
